--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "immutability-helper": "^3.1.1",
     "my-app": "file:",
     "next": "14.2.15",
     "react": "^18",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6"
   },
